--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -100,3 +100,24 @@
   width: '100%';
   z-index: 2000000;
 }
+
+.landing {
+  overflow: hidden;
+  height: 100vh;
+  width: 100vw;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fade-in {
+  animation: fadeIn 5s ease-in-out;
+}
+
+
